add static languages.

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -17,9 +17,36 @@
     "username": "Username",
     "password": "Password",
     "email": "Email",
+    "confirmPassword": "Confirm Password",
     "loginSuccess": "Login successful",
     "logoutConfirm": "Are you sure you want to logout?",
-    "logoutError": "An error occurred during logout."
+    "logoutError": "An error occurred during logout.",
+    "welcome": "Welcome",
+    "createAccount": "Create Account",
+    "appName": "Global Store",
+    "appSubtitle": "Discover amazing products worldwide",
+    "directLogin": "You can login directly:",
+    "usernamePlaceholder": "Enter your username",
+    "passwordPlaceholder": "Enter your password",
+    "emailPlaceholder": "Enter your email",
+    "confirmPasswordPlaceholder": "Re-enter your password",
+    "passwordMinLength": "Enter your password (min 6 characters)",
+    "required": "*",
+    "createAccountButton": "Create Account",
+    "autoFill": "Auto Fill",
+    "autoFillMessage": "information filled!",
+    "loginError": "Please enter your username and password.",
+    "registerError": "Please fill in all required fields.",
+    "passwordMismatch": "Passwords do not match.",
+    "passwordMinError": "Password must be at least 6 characters.",
+    "emailInvalid": "Please enter a valid email address.",
+    "loginFailed": "Login Failed",
+    "loginFailedMessage": "Username or password is incorrect.",
+    "registerSuccess": "Registration Successful!",
+    "registerSuccessMessage": "Your account has been created. You can now login.",
+    "registerFailed": "Registration Failed",
+    "registerFailedMessage": "An error occurred during registration.",
+    "ok": "OK"
   },
   "navigation": {
     "home": "Home",
@@ -32,7 +59,29 @@
     "price": "Price",
     "quantity": "Quantity",
     "total": "Total",
-    "removeFromCart": "Remove from Cart"
+    "removeFromCart": "Remove from Cart",
+    "addedToFavorites": "Product added to favorites!",
+    "removedFromFavorites": "Product removed from favorites!",
+    "favoriteError": "Favorite operation failed!",
+    "addedToCart": "Product added to cart!",
+    "addedToCartQuantity": "items added to cart!",
+    "success": "Success",
+    "inCart": "In Cart",
+    "addToCart": "Add to Cart"
+  },
+  "home": {
+    "title": "Home",
+    "searchPlaceholder": "Search products...",
+    "searchResults": "Search Results",
+    "clearSearch": "Clear",
+    "searching": "Searching...",
+    "noResults": "No results found for",
+    "emptyTitle": "No Products Found",
+    "emptyText": "There are no products to display at the moment",
+    "loading": "Loading...",
+    "errorTitle": "An Error Occurred",
+    "errorText": "An error occurred while loading products. Please try again.",
+    "subtitle": "Discover amazing products worldwide"
   },
   "cart": {
     "title": "My Cart",
@@ -42,7 +91,21 @@
     "gift": "Gift",
     "giftTo": "Who should receive this gift?",
     "giftSuccess": "Gift sent successfully!",
-    "totalAmount": "Total Amount"
+    "totalAmount": "Total Amount",
+    "removeProduct": "Remove Product",
+    "removeProductConfirm": "Are you sure you want to remove this product from your cart?",
+    "clearCart": "Clear Cart",
+    "clearCartConfirm": "Are you sure you want to remove all products from your cart?",
+    "emptyCartWarning": "Your cart is empty.",
+    "placeOrder": "Place Order",
+    "placeOrderConfirm": "Are you sure you want to pay $ for items?",
+    "selectUserWarning": "Please select a user to gift to.",
+    "giftConfirm": "Are you sure you want to gift your cart to user?",
+    "giftSuccessMessage": "Your cart has been gifted to user!",
+    "giftPackageSent": "Gift package has been sent to the user.",
+    "total": "Total",
+    "clearAll": "Clear All",
+    "warning": "Warning"
   },
   "profile": {
     "title": "Profile",
@@ -103,12 +166,11 @@
     "month": "Month",
     "year": "Year",
     "cvv": "CVV",
-    "cvvPlaceholder": "123",
-    "completePayment": "Complete Payment",
-    "processing": "Processing...",
-    "success": "Payment Successful!",
-    "successMessage": "Your order has been successfully created.",
-    "error": "An error occurred during payment processing.",
+
+    "orderSummary": "Order Summary",
+    "shipping": "Shipping",
+    "freeShipping": "Free",
+    "total": "Total",
     "validation": {
       "cardNumberRequired": "Card number is required",
       "cardNumberInvalid": "Card number must be 16 digits",
@@ -117,7 +179,18 @@
       "expiryInvalid": "Please enter a valid date",
       "cvvRequired": "CVV is required",
       "cvvInvalid": "CVV must be 3 digits"
-    }
+    },
+    "orderAmount": "Order Amount",
+    "cardInfo": "Card Information",
+
+    "monthPlaceholder": "MM",
+    "yearPlaceholder": "YY",
+    "cvvPlaceholder": "123",
+    "completePayment": "Complete Payment",
+    "processing": "Processing...",
+    "success": "Payment Successful!",
+    "successMessage": "Your order has been successfully created.",
+    "error": "An error occurred during payment processing."
   },
   "language": {
     "title": "Language Selection",
