--- a/src/i18n/locales/tr.json
+++ b/src/i18n/locales/tr.json
@@ -17,9 +17,36 @@
     "username": "Kullanıcı Adı",
     "password": "Şifre",
     "email": "E-posta",
+    "confirmPassword": "Şifre Tekrarı",
     "loginSuccess": "Giriş başarılı",
     "logoutConfirm": "Hesabınızdan çıkış yapmak istediğinize emin misiniz?",
-    "logoutError": "Çıkış yapılırken bir hata oluştu."
+    "logoutError": "Çıkış yapılırken bir hata oluştu.",
+    "welcome": "Hoş Geldiniz",
+    "createAccount": "Hesap Oluşturun",
+    "appName": "Global Store",
+    "appSubtitle": "Dünya çapında harika ürünleri keşfedin",
+    "directLogin": "Doğrudan giriş yapabilirsiniz:",
+    "usernamePlaceholder": "Kullanıcı adınızı giriniz",
+    "passwordPlaceholder": "Şifrenizi giriniz",
+    "emailPlaceholder": "Emailinizi giriniz",
+    "confirmPasswordPlaceholder": "Şifrenizi tekrar giriniz",
+    "passwordMinLength": "Şifrenizi giriniz (min 6 karakter)",
+    "required": "*",
+    "createAccountButton": "Hesap Oluştur",
+    "autoFill": "Auto Fill",
+    "autoFillMessage": "bilgileri dolduruldu!",
+    "loginError": "Lütfen kullanıcı adı ve şifrenizi giriniz.",
+    "registerError": "Lütfen tüm zorunlu alanları doldurunuz.",
+    "passwordMismatch": "Şifreler eşleşmiyor.",
+    "passwordMinError": "Şifre en az 6 karakter olmalıdır.",
+    "emailInvalid": "Geçerli bir email adresi giriniz.",
+    "loginFailed": "Giriş Başarısız",
+    "loginFailedMessage": "Kullanıcı adı veya şifre hatalı.",
+    "registerSuccess": "Kayıt Başarılı!",
+    "registerSuccessMessage": "Hesabınız oluşturuldu. Şimdi giriş yapabilirsiniz.",
+    "registerFailed": "Kayıt Başarısız",
+    "registerFailedMessage": "Kayıt işlemi sırasında bir hata oluştu.",
+    "ok": "Tamam"
   },
   "navigation": {
     "home": "Ana Sayfa",
@@ -28,11 +55,32 @@
     "profile": "Profil"
   },
   "product": {
-    "addToCart": "Sepete Ekle",
     "price": "Fiyat",
     "quantity": "Adet",
     "total": "Toplam",
-    "removeFromCart": "Sepetten Çıkar"
+    "removeFromCart": "Sepetten Çıkar",
+    "addedToFavorites": "Ürün favorilere eklendi!",
+    "removedFromFavorites": "Ürün favorilerden çıkarıldı!",
+    "favoriteError": "Favori işlemi başarısız oldu!",
+    "addedToCart": "Ürün sepete eklendi!",
+    "addedToCartQuantity": "adet ürün sepete eklendi!",
+    "success": "Başarılı",
+    "inCart": "Sepette",
+    "addToCart": "Sepete Ekle"
+  },
+  "home": {
+    "title": "Ana Sayfa",
+    "searchPlaceholder": "Ürün ara...",
+    "searchResults": "Arama Sonuçları",
+    "clearSearch": "Temizle",
+    "searching": "Aranıyor...",
+    "noResults": "için sonuç bulunamadı",
+    "emptyTitle": "Ürün Bulunamadı",
+    "emptyText": "Şu anda görüntülenecek ürün yok",
+    "loading": "Yükleniyor...",
+    "errorTitle": "Bir Hata Oluştu",
+    "errorText": "Ürünler yüklenirken bir hata oluştu. Lütfen tekrar deneyin.",
+    "subtitle": "Dünya çapında harika ürünleri keşfedin"
   },
   "cart": {
     "title": "Sepetim",
@@ -42,7 +90,21 @@
     "gift": "Hediye Et",
     "giftTo": "Kime hediye edilsin?",
     "giftSuccess": "Hediye başarıyla gönderildi!",
-    "totalAmount": "Toplam Tutar"
+    "totalAmount": "Toplam Tutar",
+    "removeProduct": "Ürünü Kaldır",
+    "removeProductConfirm": "ürününü sepetten kaldırmak istediğinizden emin misiniz?",
+    "clearCart": "Sepeti Temizle",
+    "clearCartConfirm": "Tüm ürünleri sepetten kaldırmak istediğinizden emin misiniz?",
+    "emptyCartWarning": "Sepetinizde ürün bulunmuyor.",
+    "placeOrder": "Sipariş Ver",
+    "placeOrderConfirm": "ürün için $ ödeme yapmak istediğinizden emin misiniz?",
+    "selectUserWarning": "Lütfen hediye edilecek kullanıcıyı seçin.",
+    "giftConfirm": "Sepetinizi kullanıcısına hediye etmek istediğinizden emin misiniz?",
+    "giftSuccessMessage": "Sepetiniz kullanıcısına hediye edildi!",
+    "giftPackageSent": "Hediye paketi kullanıcıya gönderildi.",
+    "total": "Toplam",
+    "clearAll": "Tümünü Temizle",
+    "warning": "Uyarı"
   },
   "profile": {
     "title": "Profil",
@@ -57,14 +119,9 @@
     "version": "GlobalStoreApp v1.0.0"
   },
   "personalInfo": {
-    "title": "Kişisel Bilgiler",
-    "basicInfo": "Temel Bilgiler",
     "username": "Kullanıcı Adı",
-    "usernamePlaceholder": "Kullanıcı adınızı girin",
     "email": "E-posta",
-    "emailPlaceholder": "ornek@email.com",
     "password": "Şifre",
-    "passwordPlaceholder": "Yeni şifrenizi girin",
     "update": "Bilgileri Güncelle",
     "updating": "Güncelleniyor...",
     "updateSuccess": "Kişisel bilgileriniz başarıyla güncellendi.",
@@ -75,7 +132,12 @@
       "emailInvalid": "Geçerli bir e-posta adresi girin",
       "passwordRequired": "Şifre gerekli",
       "passwordMinLength": "Şifre en az 6 karakter olmalıdır"
-    }
+    },
+    "title": "Kişisel Bilgiler",
+    "basicInfo": "Temel Bilgiler",
+    "usernamePlaceholder": "Kullanıcı adınızı girin",
+    "emailPlaceholder": "ornek@email.com",
+    "passwordPlaceholder": "Yeni şifrenizi girin"
   },
   "orders": {
     "title": "Siparişlerim",
@@ -94,21 +156,16 @@
     }
   },
   "payment": {
-    "title": "Ödeme",
     "cardNumber": "Kart Numarası",
-    "cardNumberPlaceholder": "1234 5678 9012 3456",
     "cardHolder": "Kart Sahibi",
-    "cardHolderPlaceholder": "AD SOYAD",
     "expiryDate": "Son Kullanma Tarihi",
     "month": "Ay",
     "year": "Yıl",
     "cvv": "CVV",
-    "cvvPlaceholder": "123",
-    "completePayment": "Ödemeyi Tamamla",
-    "processing": "İşleniyor...",
-    "success": "Ödeme Başarılı!",
-    "successMessage": "Siparişiniz başarıyla oluşturuldu.",
-    "error": "Ödeme işlemi sırasında bir hata oluştu.",
+    "orderSummary": "Sipariş Özeti",
+    "shipping": "Kargo",
+    "freeShipping": "Ücretsiz",
+    "total": "Toplam",
     "validation": {
       "cardNumberRequired": "Kart numarası gerekli",
       "cardNumberInvalid": "Kart numarası 16 haneli olmalıdır",
@@ -117,7 +174,20 @@
       "expiryInvalid": "Geçerli bir tarih girin",
       "cvvRequired": "CVV gerekli",
       "cvvInvalid": "CVV 3 haneli olmalıdır"
-    }
+    },
+    "title": "Ödeme",
+    "orderAmount": "Sipariş tutarı",
+    "cardInfo": "Kart Bilgileri",
+    "cardNumberPlaceholder": "1234 5678 9012 3456",
+    "cardHolderPlaceholder": "AD SOYAD",
+    "monthPlaceholder": "AA",
+    "yearPlaceholder": "YY",
+    "cvvPlaceholder": "123",
+    "completePayment": "Ödemeyi Tamamla",
+    "processing": "İşleniyor...",
+    "success": "Ödeme Başarılı!",
+    "successMessage": "Siparişiniz başarıyla oluşturuldu.",
+    "error": "Ödeme işlemi sırasında bir hata oluştu."
   },
   "language": {
     "title": "Dil Seçimi",
